--- a/test.html
+++ b/test.html
@@ -4,6 +4,6 @@
     <title>test title</title>
   </head>
   <body>
-    <p>This is the first try.</p>
+    <p>This is my first page in GitHub.</p>
   </body>
 </html>
